Fixed animation gap due to bundle.js conflict and created handicap variable.

--- a/app/assets/sass/style.scss
+++ b/app/assets/sass/style.scss
@@ -19,22 +19,22 @@
         background-color: #ff0000;
         display: inline-block;
         margin-right: 5px;
-        transition: all 1s ease;
-        opacity:1;
-        
+        transition: all .6s ease;
+        opacity: 1;
         //&:hover {
-          //  @extend .come-Out;
-       // }
+        //  @extend .come-Out;
+        // }
     }
 }
 
-.come-Out{
+.come-Out {
     transform: scaleY(4);
 }
-.come-In{
-    transform:scaleY(1);
+
+.come-In {
+    transform: scaleY(1);
 }
 
-.smack{
-    opacity:0 !important;
+.smack {
+    opacity: 0 !important;
 }
